[package]
name = "chip8"
version = "0.1.0"
authors = ["m33ls"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = { git = "https://github.com/parasyte/pixels.git" }
winit = "0.29"
winit_input_helper = "0.15"
log = "0.4.22"
env_logger = "0.11.6"
error-iter = "0.4.1"
